# Physical-AI-Humanoid-Robotics-Textbook

./: .dockerignore  .gitignore  architecture.md  testing.md
backend/: .gitignore  Dockerfile  FIXES_SUMMARY.md  INGESTION_README.md  OUT  README.md  agent.py  check_chunk_indices.py  clear_collection.py  main.py  pyproject.toml  requirements.txt  retrieval_validation.py  run_ingestion.py  test_422_debug.py  test_api_compatibility.py  test_fixes_verification.py  test_ingestion.py  test_ingestion_simple.py  test_qdrant_retrieval.py  test_rag.py  test_rag_fixes.py  test_rag_implementation.py  test_rag_updates.py  test_retrieval_fix.py  validation_report.json
backend/config/: settings.py
backend/models/: __init__.py  grounded_response.py  retrieved_chunk.py  text_query.py
backend/services/: retrieval_service.py
backend/src/: config.py
backend/src/api/: main.py  rag_routes.py
backend/src/ingestion/: chunker.py  crawler.py  ingestor.py  textbook_ingestor.py
backend/src/models/: api_models.py  rag_models.py  response_models.py
backend/src/services/: embedding_service.py  http_client.py  llm_service.py  qdrant_service.py  rag_service.py  session_service.py
backend/src/utils/: __init__.py  error_handlers.py  logging.py
backend/tests/: test_agent.py  test_embedding.py  test_integration.py  test_response.py  test_retrieval.py
backend/utils/: embedding_utils.py  error_handler.py
book/: README.md  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book/docs/: intro.md
docs/: rag_agent_usage.md
frontend/: package.json
(+163 files in other folders)
